# goit_bl2_hw7_ak

./: README.md  config.ini  db.py  models.py  my_select.py  pyproject.toml  requirements.txt  seed.py
alembic/versions/: 92f198c3e229_init.py
backup/: env.py
