[tool.poetry]
name = "goit-bl2-hw7-ak"
version = "0.1.0"
description = ""
authors = ["akysliak <60407830+akysliak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
faker = "^20.0.3"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
